# briefly

./: .env.example  .gitignore  Dockerfile.spark  Makefile  README.md  docker-compose.yml  note.txt  pyproject.toml  requirements.txt  setup.py  start-spark.sh  test.py  todo.md
config/: rss_feeds.json  sources  topics
data/raw/: articles_20250502_012051.json  articles_20250503_160059.json  articles_20250506_111304.json  articles_20250506_112501.json  articles_20250506_123101.json  articles_20250506_151117.json  articles_20250506_154003.json  articles_20250506_155833.json  articles_20250506_161154.json  articles_20250506_163134.json  articles_20250506_165232.json  articles_20250506_172137.json  articles_20250508_062642.json  articles_20250508_083207.json  articles_20250508_083302.json  articles_20250508_083355.json  articles_20250508_083459.json  articles_20250508_083600.json  articles_20250508_083653.json  articles_20250508_083759.json  articles_20250508_091242.json  articles_20250508_091552.json  articles_20250508_093107.json  articles_20250508_093811.json  articles_20250508_113042.json  articles_20250508_114554.json  articles_20250508_161725.json  articles_20250508_164236.json  articles_20250508_172740.json  articles_20250508_174658.json  articles_20250508_185045.json  articles_20250508_190542.json
src/news_pipeline/: config.py  definitions.py
src/news_pipeline/assets/: __init__.py  articles.py  checked_summaries.py  clean_orphaned_embeddings.py  embedded_articles.py  raw_articles.py  (+12 more)
src/scripts/: run_pipeline.py
src/tests/: test_assets.py  test_embedding.py
(+47 files in other folders)
