[project]
name = "news_pipeline"
version = "0.1.0"
description = "Briefly data pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "setuptools~=75.1.0",
    "feedparser~=6.0.11",
    "requests~=2.32.3",
    "pandas~=2.2.2",
    "dagster~=1.8.10",
    "beautifulsoup4~=4.12.3",
    "readability-lxml",
    "pymongo",
    "pydantic>=2.0.0",
    "tenacity",
    "sentence-transformers",
    "groq",
    "openai",
    "langchain",
    "pyvi",
    "langchain-groq",
    "langchain-core",
    "uuid",
    "qdrant-client",
    "pyspark==3.5.5",
    "findspark",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "src.news_pipeline.definitions"
code_location_name = "news_pipeline"

[tool.setuptools.packages.find]
exclude = ["news_pipeline_tests"]